# DuckGameG15

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  a_map.yaml  download.sh  downloadV2.sh  install.sh
client/: Background.cpp  Background.h  Bullet.cpp  Bullet.h  Duck.cpp  Duck.h  EventHandler.h  FinalScene.h  Game.cpp  Game.h  GameRenderer.h  Graficos.h  Gun.cpp  Gun.h  c_receiver.cpp  c_receiver.h  c_sender.cpp  c_sender.h  client.cpp  client.h  client_main.cpp  constant_definitons.h  endRoundscene.cpp  endRoundscene.h  eventHandler.cpp  finalScene.cpp  final_scene.cpp  final_scene.h  gameRenderer.cpp  gameRunner.cpp  gameRunner.h  graficos.cpp  main.cpp  protocolo_cliente.cpp  protocolo_cliente.h  receiver.cpp  receiver.h  sender.cpp  sender.h  sound.cpp  (+1 more)
client/Items/: Box.cpp  Box.h  Bullet.cpp  Bullet.h  CLientDuck.cpp  ClientDuck.h  Duck.cpp  Duck.h  Gun.cpp  Gun.h  Platform.cpp  Platform.h  armor.cpp  armor.h  helmet.cpp  helmet.h  pantallaVictoria.cpp  pantallaVictoria.h
client/Scenes/: colorsScene.cpp  colorsScene.h  endRoundscene.cpp  endRoundscene.h  finalScene.cpp  finalScene.h
client/menu/: CMakeLists.txt  menu.cpp  menu.h  menucontroller.cpp  menucontroller.h
common/: blocking_queue.h  common_constant.h  decode_id_to_gun.cpp  decode_id_to_gun.h  dto_definitions.h  game_exception.h  liberror.cpp  protocolo.cpp  protocolo.h  resolvererror.h  socket.cpp  socket.h  thread.h
data/editor/: menu_config.yaml
data/maps/: DonutMap.yaml  MAP1.yaml  MAP2.yaml  MAP3.yaml  NatureMap.yaml  UndergroundMap.yaml  a_map.yaml  boxes.yaml  mapaParaProbarArmas.yaml  mapa_completo.yaml  mapa_lindo.yaml  mapa_prueba.yaml  mapaa.yaml  mapita2.yaml  prueba.yaml  prueba_armas.yaml  prueba_banana.yaml  prueba_banana_granada.yaml  prueba_laser_rifle.yaml  ultraMapa.yaml
editor/levelEditor/: CMakeLists.txt  idmaker.cpp  idmaker.h  leveleditor.cpp  leveleditor.h  leveleditorcontroller.cpp  leveleditorcontroller.h  main.cpp  mapobject.cpp  mapobject.h  pathmaker.cpp  pathmaker.h  typemaker.cpp  typemaker.h
sdl2/SDL2_image-2.8.2/include/: SDL_image.h
sdl2/SDL2_image-2.8.2/src/: miniz.h  nanosvg.h  qoi.h  stb_image.h  tiny_jpeg.h
sdl2/SDL2_mixer-2.8.0/Xcode/FLAC/: config.h
sdl2/SDL2_mixer-2.8.0/Xcode/mpg123/: mpg123.h
sdl2/SDL2_mixer-2.8.0/Xcode/tremor/: config.h
sdl2/SDL2_mixer-2.8.0/Xcode/vorbis/: config.h
sdl2/SDL2_mixer-2.8.0/src/: music.h  utils.h
sdl2/SDL2_mixer-2.8.0/src/codecs/: load_aiff.h  (+2 more)
sdl2/SDL2_ttf-2.22.0/: SDL_ttf.h
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  bullet.cpp  bullet.h  bullet_pistola_cowboy.cpp  bullet_pistola_cowboy.h  constant_definitions.cpp  constant_definitons.h  duck_action.cpp  duck_action.h  element.cpp  element.h  game_loop.cpp  game_loop.h  lobby_partidas.cpp  lobby_partidas.h  objeto.cpp  objeto.h  personaje.cpp  personaje.h  protected_queues_map.cpp  protected_queues_map.h  protocolo_server.cpp  protocolo_server.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  server_constant.cpp  server_constant.h  server_main.cpp  thread_cliente.cpp  thread_cliente.h  weapon.cpp  weapon.h
server/configuration/: config.yaml  load_game.cpp  load_game.h  map.yaml  server_constants.h
server/items/: box.cpp  box.h  boxes.cpp  boxes.h  objeto.cpp  objeto.h
server/items/bullets/: banana_bullet.cpp  banana_bullet.h  bullet.cpp  bullet.h  bullet_duel_pistol.cpp  bullet_duel_pistol.h  bullet_magnum.cpp  bullet_magnum.h  bullet_pistola_cowboy.cpp  bullet_pistola_cowboy.h  granada_bullet.cpp  granada_bullet.h
server/items/ducks/: duck.cpp  duck.h  personaje.cpp  personaje.h
server/items/weapons/: ak47.cpp  ak47.h  banana.cpp  banana.h  cowboy_pistol.cpp  cowboy_pistol.h  duel_pistol.cpp  duel_pistol.h  factory_weapons.cpp  factory_weapons.h  granada.cpp  granada.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  magnun.h  pewpew_laser.cpp  pewpew_laser.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h  weapon.cpp  weapon.h
src/client/: CMakeLists.txt  EventHandler.h  GameRenderer.h  Graficos.h  c_receiver.cpp  c_receiver.h  client.cpp  client.h  eventHandler.cpp  gameRenderer.cpp  gameRunner.cpp  gameRunner.h  graficos.cpp  protocolo_cliente.cpp  protocolo_cliente.h  sound.cpp  sound.h
src/client/Items/: Box.cpp  Bullet.cpp  Bullet.h  CLientDuck.cpp  ClientDuck.h  Gun.cpp  Gun.h  Platform.cpp  Platform.h  armor.cpp  armor.h  constantTextures.h  helmet.cpp  textureManager.cpp  textureManager.h
src/client/Scenes/: colorsScene.cpp  colorsScene.h  endRoundscene.cpp  endRoundscene.h  esperaScene.cpp  esperaScene.h
src/client/menu/: menu.cpp  menucontroller.cpp  menucontroller.h
src/common/: CMakeLists.txt  common_constant.h  dto_definitions.h  game_exception.h  liberror.cpp  liberror.h  protocolo.cpp  resolver.h  socket.cpp
src/editor/: CMakeLists.txt  idmaker.cpp  leveleditor.cpp  leveleditor.h  leveleditor.ui  leveleditorcontroller.cpp  pathmaker.cpp  pathmaker.h  typemaker.cpp  typemaker.h
src/server/: CMakeLists.txt  acceptor.cpp  acceptor.h  colisions.cpp  colisions.h  duck_action.cpp  game_loop.cpp  game_loop.h  lobby_partidas.cpp  lobby_partidas.h  protected_queues_map.cpp  protocolo_server.cpp  protocolo_server.h  receiver.cpp  sender.cpp  server_constant.cpp  server_constant.h  server_main.cpp  thread_cliente.cpp
src/server/configuration/: config.yaml  load_game.cpp  load_game.h
src/server/items/: boxes.cpp  objeto.cpp  objeto.h
src/server/items/bullets/: banana_bullet.cpp  banana_bullet.h  bullet.cpp  granada_bullet.cpp  granada_bullet.h
src/server/items/ducks/: duck.cpp  duck.h
src/server/items/weapons/: ak47.cpp  ak47.h  banana.cpp  banana.h  cowboy_pistol.cpp  cowboy_pistol.h  duel_pistol.cpp  duel_pistol.h  factory_weapons.cpp  factory_weapons.h  granada.cpp  granada.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  pewpew_laser.cpp  pewpew_laser.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h  weapon.cpp  weapon.h
tests/: CMakeLists.txt  foo.cpp  protocolClientTest.cpp  protocolServerTest.cpp  test_protocol.cpp  testsProtocol.cpp
(+73 files in other folders)
